[package]
name = "glutin_resize_issue"
version = "0.1.0"
authors = ["Nikita Prokopov", "Nikita Prokopov <niki@tonsky.me>"]
description = "Glutin macOS window resize issue"
repository = "https://github.com/tonsky/glutin_resize_issue"
license = "Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2018"
publish = false

[dependencies]
glutin = "0.25.1"
winit = "0.23.0"

[build-dependencies]
gl_generator = "0.13"
